Fix partner logo alignement

--- a/_sass/0000_xs/_block_xs.scss
+++ b/_sass/0000_xs/_block_xs.scss
@@ -207,8 +207,13 @@
 
 #block7 {
   .logo-item {
-  @include make-col-ready();
-  @include make-col(6);
+    @include make-col-ready();
+    @include make-col(6);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
   }
   img {
     max-width: 100%;
